--- a/Tarea3/app.json
+++ b/Tarea3/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Practica2",
-    "slug": "Practica2",
+    "name": "Tarea3",
+    "slug": "Tarea3",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
