--- a/Tarea7/package.json
+++ b/Tarea7/package.json
@@ -16,7 +16,10 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-clipboard": "^0.0.5",
-    "react-native-toast-message": "^2.1.6"
+    "react-native-toast-message": "^2.1.6",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
